--- a/.env
+++ b/.env
@@ -1,33 +1,8 @@
-# Configuración de MongoDB  Sergio_M1022S
-MONGO_URI=postgres://neondb_owner:npg_PXTsKy65uFRD@ep-shiny-cloud-a4z818bn-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+MONGO_URI=mongodb+srv://smoscoso:Sergio_M10S@proyectosharom.kyiak.mongodb.net/facturas_db?retryWrites=true&w=majority
 DB_NAME=facturas_db
 COLLECTION_NAME=facturas
 
-# Configuración del servidor de correo - owmdydxwscionifs
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 EMAIL_USER=radicaciontransportes@gmail.com
 EMAIL_PASSWORD=owmdydxwscionifs
-
-# Recommended for most uses
-DATABASE_URL=postgres://neondb_owner:npg_PXTsKy65uFRD@ep-shiny-cloud-a4z818bn-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
-
-# For uses requiring a connection without pgbouncer
-DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_PXTsKy65uFRD@ep-shiny-cloud-a4z818bn.us-east-1.aws.neon.tech/neondb?sslmode=require
-
-# Parameters for constructing your own connection string
-PGHOST=ep-shiny-cloud-a4z818bn-pooler.us-east-1.aws.neon.tech
-PGHOST_UNPOOLED=ep-shiny-cloud-a4z818bn.us-east-1.aws.neon.tech
-PGUSER=neondb_owner
-PGDATABASE=neondb
-PGPASSWORD=npg_PXTsKy65uFRD
-
-# Parameters for Vercel Postgres Templates
-POSTGRES_URL=postgres://neondb_owner:npg_PXTsKy65uFRD@ep-shiny-cloud-a4z818bn-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
-POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_PXTsKy65uFRD@ep-shiny-cloud-a4z818bn.us-east-1.aws.neon.tech/neondb?sslmode=require
-POSTGRES_USER=neondb_owner
-POSTGRES_HOST=ep-shiny-cloud-a4z818bn-pooler.us-east-1.aws.neon.tech
-POSTGRES_PASSWORD=npg_PXTsKy65uFRD
-POSTGRES_DATABASE=neondb
-POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_PXTsKy65uFRD@ep-shiny-cloud-a4z818bn-pooler.us-east-1.aws.neon.tech/neondb
-POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_PXTsKy65uFRD@ep-shiny-cloud-a4z818bn-pooler.us-east-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
